# px4_swarm

./: CMakeLists.txt  CMakeLists.txt~  package.xml
launch/: LVC_multi_uav.launch~  Manual_Control.launch  ctrl_attitude_gazebo.launch  ctrl_attitude_gazebo.launch~  ctrl_pos_gazebo.launch  ctrl_pos_gazebo.launch~  ctrl_pos_gazebo_flight.launch~  ctrl_traj_gazebo.launch  ctrl_traj_test.launch  ctrl_traj_test.launch~  flocking.launch  flocking.launch~  flocking_formation.launch  flocking_formation.launch~  formation_flight.launch  gps_setpoint_flight.launch~  gps_setpoint_flight_new.launch~  gps_vel_flight.launch  gps_vel_flight.launch~  mavros1_node.launch~  mavros_node.launch~  multi_uav.launch~  setpoint_flight.launch  setpoint_flight.launch~  test_setpoint_flight.launch  test_setpoint_flight.launch~  uav1.launch  uav2.launch  uav3.launch  uav3.launch~  waypoint_flight.cpp~  waypoint_flight.launch~
src/: BebopAutoPilot.cpp  Flocking_controller.cpp  MakeMessage.cpp  Manual_Control.cpp  Manual_Control.cpp~  formation_flight.cpp  keyboard_controller.cpp  manual_controll.cpp  print_pose_att.cpp  pub_setpoints_att.cpp  setpoint_flight.cpp  setpoint_flocking.cpp  setpoint_flocking1.cpp  setpoint_flocking2.cpp  test_setpoint_flight.cpp
src/Client/: Client_test.cpp
src/FormationFlight/: Mission_Manager.cpp  Mission_Manager.cpp~  Mission_start.cpp  SVector3.cpp  SVector3.h  SVector3.h~  flocking.cpp  flocking_formation.cpp  flocking_formation.cpp~  formation_flight.cpp  formation_flight.cpp~  gps_controller1.cpp  gps_controller2.cpp  gps_controller3.cpp  (+6 more)
